# web-robot-control

./: .env.example  README.md  pyproject.toml
src/web_robot_control/: main.py  settings.py  views.py
static/: command.js  index.html  style.css
