[project]
name = "web-robot-control"
version = "0.1.0"
description = "Web-robot-control - open source веб-приложение для управлением роботом и трансляции видео с веб-камеры."
authors = [
    {name = "Arduinum628",email = "message.chaos628@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "web_robot_control", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
